--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Multiple MAC OUI Lookup</title>
     <meta name="description" content="Lookup manufacturers for multiple MAC addresses. Fast, simple, and accurate OUI (Organizationally Unique Identifier) discovery.">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7483705672333613" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
